--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="zh-cn"><head><meta charset="utf-8"><title>nauyx</title><style media="screen">*{margin:0;padding:0}</style></head><body></body><script type="text/javascript">window.location.href="你的博客园地址";</script></html>
+<!DOCTYPE html><html lang="zh-cn"><head><meta charset="utf-8"><title>nauyx</title><style media="screen">*{margin:0;padding:0}</style></head><body></body><script type="text/javascript">window.location.href="cs.ustc.edu.cn";</script></html>
